--- a/index.qmd
+++ b/index.qmd
@@ -1,69 +1,58 @@
 # Prefácio {.unnumbered}
 
-Este livro nasceu da experiência acumulada ao longo dos anos de 2024 e 2025 na
-oferta da disciplina *Introdução à Ciência de Dados* para os alunos do curso
-noturno de Bacharelado em Administração do IFMG – Campus Formiga. Ele reúne,
-organiza e aprofunda os materiais, exemplos e reflexões utilizados em sala de
-aula, com o objetivo de oferecer aos estudantes um recurso didático acessível,
-progressivo e alinhado com a realidade do ensino público brasileiro.
+Este livro resulta da experiência acumulada nos anos de 2024 e 2025 na
+oferta da disciplina *Introdução à Ciência de Dados* para o curso noturno de
+Bacharelado em Administração do IFMG – Campus Formiga. Ele organiza e
+aprofunda os materiais utilizados em sala de aula, com o objetivo de
+oferecer aos estudantes um recurso didático progressivo, acessível e
+alinhado à realidade do ensino público brasileiro.
 
-Este livro acompanha a estrutura da disciplina *Introdução à Ciência de
-Dados*, ofertada no curso de Bacharelado em Administração do IFMG – Campus
-Formiga. Ele funciona tanto como material de apoio às aulas quanto como um
-registro organizado dos conteúdos trabalhados ao longo do curso. Ao longo dos capítulos, o leitor encontrará referências a materiais
-complementares, ao site da disciplina e a trilhas de formação online, que
-podem ser utilizados para aprofundamento e estudo autônomo após o término da
-disciplina.
+O livro acompanha a estrutura da disciplina e funciona tanto como material
+de apoio às aulas quanto como um registro sistematizado dos conteúdos
+trabalhados ao longo do curso. Ao longo dos capítulos, o leitor encontrará
+referências a materiais complementares, ao site da disciplina e à recursos 
+online, que podem ser utilizadas para estudo autônomo após o
+término das aulas.
 
-Embora pensado prioritariamente para os alunos desse curso e desse campus, o
-livro foi escrito de forma a poder ser útil a estudantes de Administração e de
-áreas afins em outras instituições, especialmente àqueles que estão dando os
-primeiros passos no uso de dados para apoiar decisões organizacionais. Trata-se,
-portanto, de um material aberto, tanto no sentido pedagógico quanto no sentido
-institucional.
+Embora pensado prioritariamente para os alunos do curso de Administração
+do IFMG – Campus Formiga, o texto foi escrito de modo a poder ser útil a
+estudantes de Administração e áreas afins em outras instituições,
+especialmente àqueles que estão iniciando o estudo de disciplinas que 
+envolvam análise de dados e estatística. Trata-se, portanto, de 
+um material aberto e em desenvolvimento constante.
 
-O leitor típico ao qual este livro se dirige já teve algum contato prévio com
-programação, geralmente em disciplinas introdutórias que utilizam a linguagem
-Python. Ainda assim, é comum que enfrente dificuldades significativas com lógica
-de programação, matemática básica e abstrações estatísticas. Além disso, a maior
-parte dos estudantes está acostumada a trabalhar quase exclusivamente com
-planilhas eletrônicas, como o Excel, o que frequentemente limita a
-reprodutibilidade, a transparência e a escalabilidade das análises. Este livro
-parte dessa realidade concreta e não pressupõe fluência prévia em programação ou
-estatística.
+O leitor a quem este livro se dirige costuma ter algum contato prévio com
+programação, geralmente por meio de disciplinas introdutórias, mas
+frequentemente apresenta dificuldades com lógica, matemática básica e
+conceitos estatísticos. Além disso, é comum a dependência quase exclusiva
+de planilhas eletrônicas, o que limita a reprodutibilidade, a transparência
+e a escalabilidade das análises. Este livro parte dessa realidade concreta e
+não pressupõe fluência prévia em programação ou estatística.
 
-A proposta pedagógica adotada aqui é deliberada: o livro não evita as
-dificuldades inerentes à Ciência de Dados, mas procura introduzi-las de forma
-honesta, gradual e contextualizada. Conceitos, técnicas e ferramentas são
-apresentados passo a passo, sempre que possível ancorados em exemplos práticos
-relacionados à área de Administração, sem promessas de atalhos ou soluções
-milagrosas. O objetivo não é apenas ensinar comandos ou procedimentos, mas
-contribuir para a formação de um modo de pensar analítico, crítico e orientado
-por dados.
+A proposta é deliberada: as dificuldades inerentes à Ciência de
+Dados não são evitadas, mas introduzidas de forma gradual e
+contextualizada. Conceitos, técnicas e ferramentas são apresentados passo a
+passo, sempre que possível ancorados em exemplos ligados à área de
+Administração. O objetivo não é ensinar apenas comandos, mas contribuir
+para a formação de um modo de pensar analítico, crítico e orientado por
+dados.
 
-A linguagem central utilizada ao longo do livro é **R**, escolhida por sua ampla
-adoção acadêmica, forte ecossistema de pacotes e adequação a análises
-reprodutíveis. Além disso, o livro introduz noções básicas de **SQL**, reconhecendo
-a importância dessa linguagem no trabalho com bases de dados reais. Ferramentas
-como o **RStudio**, o uso do **terminal (BASH no Windows)**, bem como **Git** e
-**GitHub**, fazem parte do ambiente de trabalho apresentado, não como fins em si,
-mas como instrumentos fundamentais para práticas modernas de análise de dados.
-O sistema **Quarto** é utilizado extensivamente, tanto para a produção deste
-livro quanto como ferramenta didática, reforçando a importância da
-reprodutibilidade e da documentação clara.
+A linguagem de programação adotada é **R**, escolhida pelo fato de considerá-la a 
+melhor linguagem de programação especializada em análise de dados. O livro também
+introduz noções básicas de **SQL**, reconhecendo sua importância no trabalho
+com bases de dados reais. Ferramentas como **RStudio**, **Git** e
+**GitHub**, bem como o uso do **terminal**, são apresentadas como parte de um
+ambiente de trabalho coerente, voltado à organização, documentação e
+controle de versões. O sistema **Quarto** é utilizado extensivamente, 
+reforçando a importância da reprodutibilidade, transparência e 
+importância de documentação dos procedimentos de análise.
 
-Este projeto também é uma resposta a uma limitação estrutural: a escassez de
-referências atualizadas e traduzidas para o português na área de Ciência de
-Dados, aliada à dificuldade de acesso a livros importados em instituições
-públicas de ensino. Diante desse cenário, a produção de materiais abertos e
-adaptados ao contexto local torna-se não apenas desejável, mas necessária.
+Este projeto também responde a um grave problema estrutural em minha 
+visão: a escassez de referências atualizadas em português na área de 
+Ciência de Dados e adificuldade de acesso a livros importados em 
+instituições públicas. Nessecontexto, a produção de materiais abertos 
+e adaptados ao contexto local torna-se necessária.
 
-Por fim, este texto deve ser entendido como um material vivo. Ele não pretende
-ser definitivo nem completo, mas sim um ponto de partida que pode ser
-progressivamente aprimorado, corrigido e expandido ao longo do tempo, sempre em
-diálogo com a experiência em sala de aula e com as necessidades reais dos
-estudantes.
 
-[**Washington Santos da Silva**](https://washingtonsilva.github.io){target="_blank"} <br>
+[**Washington Santos da Silva**](https://washingtonsilva.github.io){target="_blank"}  
 Professor do IFMG – Campus Formiga
-
