--- a/01_capitulo.qmd
+++ b/01_capitulo.qmd
@@ -14,29 +14,54 @@ progressivamente incorporados às práticas de gestão, pesquisa e tomada de
 decisão. Compreender essa trajetória é fundamental para entender por que a
 Ciência de Dados se tornou uma área central no mundo contemporâneo.
 
+
+
 ## A economia de dados: um breve histórico
 
-As raízes da economia de dados podem ser identificadas ainda no século XIX,
-quando jornais norte-americanos passaram a realizar levantamentos para
-antecipar resultados eleitorais. No início do século XX, com o avanço do
-marketing, pesquisadores e empresas estruturaram departamentos dedicados ao
-estudo sistemático do comportamento do consumidor.
+As raízes da economia de dados remontam ao século XIX, quando jornais
+norte-americanos passaram a coletar informações sistemáticas sobre seus
+leitores e a realizar levantamentos para antecipar resultados eleitorais. Já
+nesse período inicial, dados eram utilizados como instrumento para reduzir
+incertezas e orientar decisões editoriais e comerciais, ainda que de forma
+incipiente e pouco padronizada [@harkness2021p01].
+
+No início do século XX, com a consolidação do marketing como área
+organizacional, empresas e pesquisadores passaram a estruturar departamentos
+dedicados ao estudo sistemático do comportamento do consumidor. A coleta de
+dados deixou de ser episódica e passou a integrar processos contínuos de
+análise, voltados à compreensão de mercados, preferências e padrões de
+consumo [@harkness2021p01].
 
 A partir da década de 1930, a introdução de métodos estatísticos de amostragem,
-popularizados por George Gallup, marcou uma mudança importante: previsões
-baseadas em dados passaram a ser cientificamente fundamentadas. Entre as
-décadas de 1950 e 1980, empresas como a Nielsen consolidaram sistemas de
-observação contínua de hábitos de consumo, reforçando a ideia de que observar
-o comportamento real frequentemente produz informações mais confiáveis do
-que simplesmente perguntar.
+notadamente os trabalhos associados a George Gallup, marcou uma mudança
+qualitativa importante. Previsões baseadas em dados passaram a apoiar-se em
+fundamentos estatísticos mais sólidos, substituindo abordagens baseadas em
+grandes volumes de respostas não controladas por técnicas cientificamente
+mais rigorosas [@harkness2021p02].
 
-Com a digitalização da economia a partir dos anos 1990, códigos de barras,
-programas de fidelidade e, posteriormente, plataformas digitais e redes
-sociais transformaram dados em um ativo estratégico de escala global. Mais
-recentemente, modelos avançados de inteligência artificial, como os grandes
-modelos de linguagem, representam o estágio mais sofisticado dessa
-trajetória, dependendo fortemente de grandes volumes de dados para seu
-treinamento.
+Entre as décadas de 1950 e 1980, empresas como a Nielsen consolidaram sistemas
+de observação contínua de hábitos de consumo e audiência. Esse período reforçou
+uma distinção central na economia de dados: observar comportamentos reais, de
+forma sistemática, frequentemente produz informações mais confiáveis do que
+simplesmente perguntar aos indivíduos sobre suas intenções ou opiniões
+[@harkness2021p02, @harkness2021p03].
+
+Com a digitalização da economia a partir dos anos 1990, o uso de códigos de
+barras, programas de fidelidade e, posteriormente, plataformas digitais e
+redes sociais transformou os dados em um ativo estratégico de escala global. A
+capacidade de coletar, armazenar e analisar grandes volumes de informações
+passou a redefinir modelos de negócio e estruturas competitivas em diversos
+setores [@harkness2021p03].
+
+Mais recentemente, o avanço de modelos de inteligência artificial, como os
+grandes modelos de linguagem, representa o estágio mais sofisticado dessa
+trajetória. Esses sistemas dependem fortemente de grandes volumes de dados para
+seu treinamento e funcionamento, evidenciando que, na economia contemporânea,
+dados não são apenas um subproduto das atividades organizacionais, mas um
+recurso central que condiciona inovação, eficiência e poder econômico
+[@harkness2021p04].
+
+
 
 ## Big Data e a explosão do volume de dados
 
@@ -62,18 +87,44 @@ passaram a destacar dados como um dos recursos mais valiosos da economia
 contemporânea.
 
 Um marco simbólico importante na consolidação da chamada economia de dados foi
-a capa da revista *The Economist*, publicada em 2017, que trazia a afirmação
-“Data is the new oil” (“Dados são o novo petróleo”). A analogia sugere que,
-assim como o petróleo foi o recurso estratégico central da economia industrial,
-os dados passaram a ocupar papel equivalente na economia digital.
+a capa da revista *The Economist*, publicada em 2017, cujo título era 
+*The World’s Most Valuable Resource* (“O recurso mais valioso do mundo”) e cujo
+subtítulo anunciava *Data and the new rules of competition* (“Dados e as novas
+regras da competição”). A mensagem central não era apenas a comparação entre
+dados e petróleo, mas a ideia de que os dados haviam se tornado o principal
+recurso estratégico capaz de redefinir a dinâmica competitiva entre empresas
+e setores.
+
+Diferentemente de recursos tradicionais, os dados não geram valor de forma
+automática. Seu valor emerge da capacidade de coletá-los, organizá-los,
+analisá-los e, sobretudo, utilizá-los de maneira sistemática na tomada de
+decisão. Nesse sentido, a capa da *The Economist* aponta para uma mudança mais
+profunda: empresas competitivas passam a ser aquelas capazes de transformar
+dados em conhecimento operacional e vantagem estratégica contínua.
+
+Essa mudança implica novas regras de competição. Escala, velocidade de
+análise, capacidade de experimentação e aprendizado contínuo tornam-se fatores
+centrais. Organizações que dominam esses elementos conseguem adaptar produtos,
+processos e estratégias com maior rapidez, enquanto aquelas que tratam dados
+apenas como subprodutos operacionais tendem a perder relevância.
+
+Ao destacar os dados como o recurso mais valioso da economia contemporânea, a
+revista reforça a necessidade de métodos, ferramentas e competências voltadas
+não apenas à análise técnica, mas à integração entre dados, estratégia e
+decisão. É nesse contexto que a Ciência de Dados se consolida como área
+essencial para a Administração, indo além do uso de tecnologias específicas e
+passando a influenciar diretamente a forma como as organizações competem.
+
 
 ```{r}
-#| label: fig-data-new-oil
+#| label: fig-worlds-most-valuable-resource
 #| echo: false
-#| fig-cap: "Capa da revista *The Economist* (2017): \"Data is the new oil\"."
+#| fig-cap: "Capa da revista *The Economist* (2017): The World’s Most Valuable Resource — Data and the new rules of competition."
 #| out-width: "60%"
 knitr::include_graphics("img/new_oil.jpeg")
 ```
+
+
 
 ## O que é Ciência de Dados?
 
@@ -98,6 +149,8 @@ knitr::include_graphics("img/diagrama_venn_ds.png")
 Essa característica interdisciplinar explica tanto o potencial da área quanto
 a diversidade de formações presentes em equipes de dados.
 
+
+
 ## Metodologias e processos: CRISP-DM
 
 A prática da Ciência de Dados costuma ser organizada por meio de
@@ -117,6 +170,8 @@ knitr::include_graphics("img/crispdm-trad.png")
 Esse modelo destaca que projetos de dados raramente seguem um caminho linear.
 É comum que análises retornem a etapas anteriores à medida que novos insights
 surgem ou que hipóteses iniciais precisem ser revistas.
+
+
 
 ## Papéis profissionais na área de dados
 
