--- a/referencias.bib
+++ b/referencias.bib
@@ -78,3 +78,14 @@
   note         = {Guia que descreve a metodologia CRISP-DM aplicada ao IBM SPSS Modeler}
 }
 
+
+@article{economist2017,
+  title   = {The World's Most Valuable Resource},
+  journal = {The Economist},
+  date    = {2017-05-06},
+  volume  = {423},
+  number  = {9039},
+  note    = {Cover theme: ``Data and the new rules of competition''},
+  url     = {https://www.economist.com/weeklyedition/2017-05-06},
+}
+
