--- a/referencias.bib
+++ b/referencias.bib
@@ -79,13 +79,14 @@
 }
 
 
-@article{economist2017,
-  title   = {The World's Most Valuable Resource},
-  journal = {The Economist},
-  date    = {2017-05-06},
-  volume  = {423},
-  number  = {9039},
-  note    = {Cover theme: ``Data and the new rules of competition''},
-  url     = {https://www.economist.com/weeklyedition/2017-05-06},
+@misc{economist2017,
+  title        = {The World's Most Valuable Resource},
+  author       = {The Economist},
+  year         = {2017},
+  month        = may,
+  day          = {6},
+  url          = {https://www.economist.com/weeklyedition/2017-05-06},
+  urldate      = {2026-01-20}
 }
+
 
