--- a/referencias.bib
+++ b/referencias.bib
@@ -81,7 +81,7 @@
 
 @misc{economist2017,
   title        = {The World's Most Valuable Resource},
-  author       = {The Economist},
+  author       = {{The Economist}},
   year         = {2017},
   month        = may,
   day          = {6},
