--- a/referencias.bib
+++ b/referencias.bib
@@ -90,3 +90,15 @@
 }
 
 
+@book{jung2024modern,
+  author    = {Jung, Dominik},
+  title     = {The Modern Business Data Analyst: A Case Study Introduction into Business Data Analytics with CRISP-DM and R},
+  publisher = {Springer Nature Switzerland},
+  year      = {2024},
+  address   = {Cham, Switzerland},
+  isbn      = {978-3-031-59906-4},
+  doi       = {10.1007/978-3-031-59907-1}
+}
+
+
+
