--- a/02_capitulo.qmd
+++ b/02_capitulo.qmd
@@ -1,8 +1,10 @@
 # Metodologia CRISP-DM
 
 Este capítulo apresenta a metodologia CRISP-DM (*Cross-Industry Standard
-Process for Data Mining*) [@ibm_crisp_dm], amplamente utilizada para estruturar projetos de Ciência de Dados. O objetivo é oferecer uma visão clara e operacional deste método, destacando o papel do administrador na condução e no alinhamento
-estratégico desses projetos.
+Process for Data Mining*) [@ibm_crisp_dm], amplamente utilizada para estruturar
+projetos de Ciência de Dados. O objetivo é oferecer uma visão clara e
+operacional do método, com ênfase no papel do administrador na condução,
+coordenação e alinhamento estratégico desses projetos.
 
 
 ## O problema do “código antes do plano”
@@ -18,6 +20,7 @@ desperdício de tempo e recursos, além de dificuldades para escalar projetos
 piloto para soluções corporativas.
 
 
+
 ## O papel do administrador em projetos de dados
 
 Nesse contexto, o administrador desempenha papel central. Cabe a ele
@@ -25,10 +28,11 @@ assegurar que projetos de dados tenham início a partir de objetivos de
 negócio claramente definidos, com critérios mensuráveis de sucesso
 estabelecidos antes da implementação técnica.
 
-Além disso, o administrador atua como elo entre equipes técnicas e a
-organização, traduzindo necessidades estratégicas em perguntas analíticas e
-garantindo que os resultados produzidos sejam relevantes para a tomada de
-decisão.
+Além disso, o administrador atua como elo entre equipes técnicas e as
+partes interessadas no projeto, articulando expectativas, restrições e
+prioridades organizacionais, e garantindo que os resultados produzidos
+sejam relevantes para a tomada de decisão.
+
 
 
 ## Ferramentas são meios, não fins
@@ -43,12 +47,13 @@ enfatizando que a modelagem é apenas uma das etapas de um processo mais
 amplo, orientado por objetivos organizacionais.
 
 
+
 ## CRISP-DM como estrutura orientadora
 
-O CRISP-DM é uma metodologia consolidada para organizar projetos de dados
-de forma sistemática e iterativa. Diferentemente de abordagens centradas em
-ferramentas, o processo começa com a compreensão do negócio e termina com a
-implementação e avaliação dos resultados no contexto organizacional.
+O CRISP-DM organiza projetos de dados de forma sistemática e iterativa.
+Diferentemente de abordagens centradas em ferramentas, o processo se inicia
+na compreensão do negócio e se encerra com a avaliação e implementação dos
+resultados no contexto organizacional.
 
 ```{r}
 #| label: fig-crispdm-fases
@@ -58,85 +63,93 @@ implementação e avaliação dos resultados no contexto organizacional.
 knitr::include_graphics("img/crispdm.png")
 ```
 
-As fases do CRISP-DM funcionam como pontos de verificação, permitindo
-avaliar o progresso, alinhar expectativas e decidir se o projeto deve
-avançar, ser ajustado ou interrompido.
+As fases funcionam como pontos de verificação, permitindo avaliar o
+progresso, alinhar expectativas e decidir se o projeto deve avançar, ser
+ajustado ou interrompido.
+
 
 
 ## Fase 1: Compreensão do Negócio (*Business Understanding*)
 
 A primeira fase do CRISP-DM tem como foco alinhar a análise de dados aos
-objetivos empresariais. Antes de qualquer coleta ou modelagem, é necessário
-compreender claramente qual problema se deseja resolver e por que ele é
-relevante.
+objetivos empresariais. Antes de qualquer coleta, modelagem ou análise, é
+necessário compreender claramente qual problema se deseja resolver, por que
+ele é relevante e para quem.
 
-Nessa etapa, objetivos de negócio são definidos, a situação atual é
-avaliada, metas analíticas são estabelecidas e um plano de projeto é
-elaborado.
-
+Nessa etapa, objetivos de negócio são definidos, a situação organizacional
+é avaliada, as partes interessadas são identificadas, metas analíticas são
+estabelecidas e um plano de projeto é elaborado de forma realista.
 
 ### Checklist da Fase 1
 
-| #   | Tarefa                          | Resultados esperados                         |
-| --- | ------------------------------- | -------------------------------------------- |
-| 1.1 | Determinar objetivos de negócio | Contexto, objetivos e critérios de sucesso   |
-| 1.2 | Avaliar situação                | Recursos, restrições, riscos e contingências |
-| 1.3 | Determinar objetivos de análise | Metas analíticas e critérios técnicos        |
-| 1.4 | Produzir plano do projeto       | Cronograma, responsáveis e ferramentas       |
+| #   | Tarefa                          | Resultados esperados                  |
+| --- | ------------------------------- | ------------------------------------- |
+| 1.1 | Determinar objetivos de negócio | Contexto e critérios de sucesso       |
+| 1.2 | Avaliar situação                | Recursos, restrições e riscos         |
+| 1.3 | Alinhar partes interessadas     | Expectativas e responsabilidades      |
+| 1.4 | Determinar objetivos de análise | Metas analíticas e critérios técnicos |
+| 1.5 | Produzir plano do projeto       | Cronograma e responsabilidades        |
+
 
 
 ## Fase 2: Compreensão dos Dados (*Data Understanding*)
 
-Após a definição dos objetivos, inicia-se a compreensão dos dados
-disponíveis. O foco desta fase é conhecer profundamente as fontes de
-dados, suas características, limitações e problemas de qualidade.
+A compreensão dos dados envolve conhecer profundamente as informações que
+serão utilizadas no projeto, independentemente de elas já existirem ou
+precisarem ser produzidas.
 
-São realizadas atividades de coleta inicial, descrição, exploração e
-verificação da qualidade dos dados, fornecendo base sólida para as etapas
+Em muitos projetos, os dados não estão imediatamente disponíveis, sendo
+necessário coletá-los a partir de fontes externas, bases públicas,
+sistemas de terceiros ou por meio de instrumentos como surveys,
+experimentos ou registros operacionais. Nessa fase, também são avaliadas
+viabilidade, custos, limitações éticas e qualidade dos dados.
+
+As atividades incluem coleta ou produção inicial, descrição, exploração e
+verificação de qualidade, fornecendo base empírica sólida para as etapas
 seguintes.
-
 
 ### Checklist da Fase 2
 
-| #   | Tarefa                        | Resultados esperados    |
-| --- | ----------------------------- | ----------------------- |
-| 2.1 | Coletar dados iniciais        | Relatório de coleta     |
-| 2.2 | Descrever dados               | Relatório de descrição  |
-| 2.3 | Explorar dados                | Relatório de exploração |
-| 2.4 | Verificar qualidade dos dados | Relatório de qualidade  |
+| #   | Tarefa                        | Resultados esperados          |
+| --- | ----------------------------- | ----------------------------- |
+| 2.1 | Coletar ou produzir dados     | Relatório ou desenho de dados |
+| 2.2 | Descrever dados               | Relatório de descrição        |
+| 2.3 | Explorar dados                | Relatório de exploração       |
+| 2.4 | Verificar qualidade dos dados | Relatório de qualidade        |
+
 
 
 ## Fase 3: Preparação dos Dados (*Data Preparation*)
 
-A preparação dos dados é, frequentemente, a fase mais trabalhosa do
-processo. Seu objetivo é transformar dados brutos em um conjunto adequado
-para análise e modelagem.
+A preparação dos dados é frequentemente a fase mais trabalhosa do
+processo. Seu objetivo é transformar dados brutos ou heterogêneos em um
+conjunto adequado para análise e modelagem.
 
-Inclui seleção de registros e variáveis, limpeza de inconsistências,
-criação de atributos derivados, integração de diferentes fontes e
-padronização de formatos.
-
+Inclui seleção de registros e variáveis, tratamento de inconsistências,
+criação de atributos derivados, integração de múltiplas fontes e
+padronização de formatos, com documentação das decisões adotadas.
 
 ### Checklist da Fase 3
 
-| #   | Tarefa           | Resultados esperados                  |
-| --- | ---------------- | ------------------------------------- |
-| 3.1 | Selecionar dados | Justificativas de inclusão e exclusão |
-| 3.2 | Limpar dados     | Relatório de limpeza                  |
-| 3.3 | Construir dados  | Atributos derivados                   |
-| 3.4 | Integrar dados   | Conjuntos integrados                  |
-| 3.5 | Formatar dados   | Conjunto final documentado            |
+| #   | Tarefa           | Resultados esperados             |
+| --- | ---------------- | -------------------------------- |
+| 3.1 | Selecionar dados | Critérios de inclusão e exclusão |
+| 3.2 | Limpar dados     | Relatório de limpeza             |
+| 3.3 | Construir dados  | Atributos derivados              |
+| 3.4 | Integrar dados   | Conjuntos integrados             |
+| 3.5 | Formatar dados   | Conjunto final documentado       |
+
 
 
 ## Fase 4: Modelagem (*Modeling*)
 
-Na fase de modelagem, técnicas analíticas e estatísticas são aplicadas aos
-dados preparados. São escolhidos algoritmos apropriados, definidos
-procedimentos de teste e ajustados parâmetros dos modelos.
+Na fase de modelagem, técnicas estatísticas e de aprendagem de máquisa são 
+aplicadas aosdados preparados. São escolhidos algoritmos compatíveis com 
+os objetivos do projeto, definidos procedimentos de validação e ajustados 
+parâmetros dos modelos.
 
-É importante destacar que decisões tomadas nesta fase dependem
-fortemente das escolhas realizadas nas etapas anteriores.
-
+Decisões tomadas nessa fase dependem fortemente das escolhas realizadas nas
+etapas anteriores e, com frequência, exigem iteração com fases anteriores.
 
 ### Checklist da Fase 4
 
@@ -148,16 +161,16 @@ fortemente das escolhas realizadas nas etapas anteriores.
 | 4.4 | Avaliar modelo        | Métricas e ajustes      |
 
 
+
 ## Fase 5: Avaliação (*Evaluation*)
 
-A fase de avaliação verifica se os resultados obtidos geram valor para o
-negócio. Não se trata apenas de desempenho técnico, mas de aderência aos
-objetivos definidos inicialmente.
+A avaliação verifica se os resultados obtidos atendem aos objetivos de
+negócio definidos inicialmente. Não se trata apenas de desempenho técnico,
+mas de utilidade prática, viabilidade de implementação e impacto
+organizacional.
 
-Nesta etapa, decide-se se o modelo está pronto para implementação, se
-ajustes adicionais são necessários ou se novas análises devem ser
-conduzidas.
-
+Nesta etapa, decide-se se o modelo está pronto para uso, se ajustes
+adicionais são necessários ou se novas análises devem ser conduzidas.
 
 ### Checklist da Fase 5
 
@@ -168,16 +181,16 @@ conduzidas.
 | 5.3 | Determinar próximos passos | Decisões e ações                    |
 
 
+
 ## Fase 6: Implementação (*Deployment*)
 
 A implementação transforma análises e modelos em instrumentos efetivos de
 decisão. Envolve integração com sistemas organizacionais, definição de
-métricas de monitoramento e produção de relatórios ou dashboards para os
+métricas de monitoramento, manutenção e comunicação dos resultados aos
 gestores.
 
 Essa fase também inclui a documentação do projeto e a consolidação de
-aprendizados para uso em iniciativas futuras.
-
+aprendizados, contribuindo para a maturidade analítica da organização.
 
 ### Checklist da Fase 6
 
@@ -187,7 +200,6 @@ aprendizados para uso em iniciativas futuras.
 | 6.2 | Planejar monitoramento e manutenção | Plano de monitoramento      |
 | 6.3 | Produzir relatório final            | Relatório e apresentação    |
 | 6.4 | Revisar projeto                     | Documentação de experiência |
-
 
 
 
