--- a/03_capitulo.qmd
+++ b/03_capitulo.qmd
@@ -1,45 +1,48 @@
-# Tipos de análise e Pertuntas de Negócio
+# Tipos de análise e perguntas de negócio
 
 Ao longo do processo CRISP-DM, diferentes tipos de análise podem ser
-empregados, variando em complexidade técnica e valor estratégico. Cada
-tipo de análise responde a uma pergunta distinta e reflete um determinado
-nível de maturidade analítica da organização.
+empregados, variando em complexidade técnica, grau de formalização e
+valor estratégico. Cada tipo de análise responde a uma pergunta distinta
+de negócio e está associado a decisões tomadas em fases específicas do
+processo analítico.
 
 As análises descritiva, diagnóstica, preditiva e prescritiva não são
 excludentes. Pelo contrário, costumam ser adotadas de forma progressiva e
 complementar, à medida que a organização desenvolve suas capacidades
-analíticas e passa a utilizar dados de forma mais sistemática em seus
+analíticas e passa a integrar dados de maneira mais sistemática em seus
 processos decisórios.
 
 
-## Visão geral dos tipos de análise
+## Visão geral dos tipos de análise no CRISP-DM
 
 O termo *analytics* refere-se a um espectro contínuo de técnicas analíticas
-que evoluem em complexidade e impacto organizacional. Esse espectro vai da
-compreensão do que ocorreu no passado até a recomendação de ações
-otimizadas para o futuro.
+que evoluem desde a organização e compreensão do passado até a
+recomendação de ações orientadas para o futuro.
 
-Cada tipo de análise está associado a uma pergunta fundamental de negócio
-e a um conjunto específico de métodos. Em geral, as organizações avançam
-nessa jornada de forma gradual, consolidando competências em um nível
-antes de progredir para o seguinte.
+No contexto do CRISP-DM, esses tipos de análise não correspondem a fases
+isoladas, mas atravessam o processo como um todo. Análises descritivas e
+diagnósticas são predominantes nas fases de Compreensão do Negócio e dos
+Dados, enquanto análises preditivas e prescritivas tornam-se centrais nas
+fases de Modelagem, Avaliação e Implementação.
 
-A maturidade analítica de uma empresa pode ser avaliada pelo equilíbrio e
-pela profundidade com que esses quatro tipos de análise são incorporados
-às rotinas de decisão.
+A maturidade analítica de uma organização pode ser avaliada pelo
+equilíbrio e pela profundidade com que esses quatro tipos de análise são
+utilizados de forma integrada, e não apenas pela adoção de técnicas mais
+sofisticadas.
 
 
 ## Análise descritiva
 
-A análise descritiva representa o primeiro nível de uso sistemático de
-dados. Seu objetivo é resumir e organizar informações históricas de modo
-a tornar o passado compreensível.
+A análise descritiva representa o nível inicial do uso sistemático de
+dados. Seu objetivo é organizar, resumir e comunicar informações
+históricas de modo a tornar o passado compreensível para gestores e
+tomadores de decisão.
 
 ::: {.callout-note icon=false}
 ## O que aconteceu?
 
-- **Objetivo**: Sumarizar dados históricos para identificar padrões,
-  tendências e comportamentos recorrentes.
+- **Objetivo**: Descrever e sintetizar dados históricos, identificando
+  padrões, tendências e comportamentos recorrentes.
 
 - **Técnicas**: Estatísticas descritivas, tabelas, visualizações e
   dashboards.
@@ -47,19 +50,22 @@ a tornar o passado compreensível.
 - **Complexidade**: ★☆☆☆
 :::
 
-No contexto da Administração, a análise descritiva é amplamente utilizada
-em relatórios gerenciais e sistemas de acompanhamento operacional.
+No contexto da Administração, a análise descritiva está fortemente
+associada a relatórios gerenciais e sistemas de acompanhamento
+operacional. Ela fornece a base informacional sobre a qual análises mais
+avançadas podem ser construídas.
 
-**Exemplos** incluem relatórios de vendas por canal durante períodos
-promocionais, dashboards de monitoramento de indicadores em tempo real e
-análises de segmentação de clientes por região ou perfil de consumo.
+Exemplos incluem relatórios de vendas por canal em períodos promocionais,
+painéis de monitoramento de indicadores operacionais e análises de
+distribuição de clientes por região ou perfil de consumo.
 
 
 ## Análise diagnóstica
 
 A análise diagnóstica aprofunda a análise descritiva ao buscar explicações
-para os padrões observados. Enquanto a análise descritiva mostra *o que*
-aconteceu, a diagnóstica procura entender *por que* aconteceu.
+para os padrões observados. Enquanto a análise descritiva responde ao
+*o que* aconteceu, a diagnóstica procura compreender *por que* esses
+resultados ocorreram.
 
 ::: {.callout-note icon=false}
 ## Por que aconteceu?
@@ -67,48 +73,56 @@ aconteceu, a diagnóstica procura entender *por que* aconteceu.
 - **Objetivo**: Investigar causas, relações e fatores associados aos
   resultados observados.
 
-- **Técnicas**: Análise de correlação, segmentação, *drill-down*,
-  análise de fatores e comparações entre grupos.
+- **Técnicas**: Análise de correlação, segmentação, comparações entre
+  grupos, *drill-down* e análise de fatores.
 
 - **Complexidade**: ★★☆☆
 :::
 
-Em Administração, esse tipo de análise é fundamental para apoiar decisões
-corretivas e ajustes de estratégia, como investigar as causas de queda nas
-vendas após um reajuste de preços ou identificar fatores associados ao
-aumento do turnover em determinadas unidades da empresa.
+Esse tipo de análise é fundamental para apoiar decisões corretivas e
+ajustes de estratégia, como identificar fatores associados à queda nas
+vendas após um reajuste de preços ou compreender as causas do aumento do
+turnover em determinadas unidades organizacionais.
+
+No CRISP-DM, análises diagnósticas são recorrentes nas fases de
+Compreensão do Negócio e dos Dados, orientando decisões sobre coleta,
+preparação e seleção de variáveis relevantes.
 
 
 ## Análise preditiva
 
 A análise preditiva utiliza dados históricos para estimar comportamentos
-futuros. Nesse nível, modelos estatísticos e de aprendizagem de máquina
-passam a desempenhar papel central.
+futuros ou resultados prováveis. Nesse nível, modelos estatísticos e de
+aprendizagem de máquina passam a desempenhar papel central.
 
 ::: {.callout-note icon=false}
 ## O que provavelmente acontecerá?
 
-- **Objetivo**: Prever tendências futuras e resultados prováveis com base
-  em padrões históricos.
+- **Objetivo**: Estimar tendências futuras e resultados prováveis com base
+  em padrões observados nos dados.
 
-- **Técnicas**: modelos de regressão, análise de séries temporais, algoritmos para 
-classifição.
+- **Técnicas**: Modelos de regressão, séries temporais e algoritmos de
+  classificação.
 
 - **Complexidade**: ★★★☆
 :::
 
-Exemplos típicos em Administração incluem a previsão de demanda para
+Exemplos típicos em Administração incluem previsão de demanda para
 produtos sazonais, modelos de propensão à inadimplência em instituições
 financeiras e estimativas de giro de estoque para apoiar decisões de
 compras e logística.
+
+No CRISP-DM, a análise preditiva está fortemente associada à fase de
+Modelagem, mas depende diretamente das decisões tomadas nas etapas
+anteriores de compreensão e preparação dos dados.
 
 
 ## Análise prescritiva
 
 A análise prescritiva representa o nível mais avançado da jornada
-analítica. Seu foco não está apenas em prever resultados, mas em recomendar
-ações que maximizem objetivos organizacionais, considerando restrições e
-trade-offs.
+analítica. Seu foco não está apenas em prever resultados, mas em
+recomendar ações que maximizem objetivos organizacionais, considerando
+restrições, custos e trade-offs.
 
 ::: {.callout-note icon=false}
 ## O que devemos fazer?
@@ -123,10 +137,10 @@ trade-offs.
 :::
 
 No contexto empresarial, a análise prescritiva é utilizada em problemas
-como otimização do mix de produtos por loja, recomendação personalizada em
-plataformas de e-commerce e definição automática de rotas logísticas em
-ambientes urbanos complexos.
+como otimização do mix de produtos por loja, recomendação personalizada
+em plataformas de e-commerce e definição automática de rotas logísticas
+em ambientes urbanos complexos.
 
-Em geral, esse tipo de análise exige não apenas maturidade técnica, mas
-também processos decisórios bem estruturados e integração com sistemas
-operacionais.
+Esse tipo de análise exige não apenas maturidade técnica, mas também
+processos decisórios bem estruturados, integração com sistemas
+operacionais e clareza quanto aos objetivos estratégicos da organização.
